fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
   font-size: 25px;
   font-weight: bold;
   line-height: 100px;
+  text-align: center;
 }
 
 .roll-btn {
